Update text alignment for h2 elements to ensure consistent styling

--- a/css.css
+++ b/css.css
@@ -70,7 +70,7 @@ h1 {
 h2 {
     font-size: 20px;
     font-family: "Segoe UI", Helvetica, Tahoma, Geneva, Verdana, sans-serif;
-    text-align: left;
+    text-align: left !important;
     line-height: 30px;
     margin: 0 0 18px 0;
     padding: 0;
